<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/noInternetLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10dp"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <com.demo.views.MyCustomTextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_18sp"
            android:visibility="gone"
            app:myFontFamily="semi_bold" />

        <com.demo.views.MyCustomTextView
            android:id="@+id/txtMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:gravity="center"
            android:text="@string/error_no_internet"
            android:textColor="@color/black"/>

        <com.demo.views.MyCustomButton
            android:id="@+id/btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40dp"
            android:layout_marginTop="@dimen/_10dp"
            android:minWidth="@dimen/_160dp"
            android:text="@string/try_again"
            android:textColor="@color/white"
            android:visibility="gone"
            app:myFontFamily="semi_bold"
            android:background="@drawable/gradient_btn_bg"/>
    </LinearLayout>
</RelativeLayout>